modul2-networking/01-infrastructure.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend-ns
---
# FRONTEND POD
apiVersion: v1
kind: Pod
metadata:
  name: frontend-app
  namespace: frontend-ns
  labels:
    app: frontend
spec:
  containers:
  - name: utils
    image: alpine
    command: ["sleep", "3600"]
---
# BACKEND POD
apiVersion: v1
kind: Pod
metadata:
  name: backend-app
  namespace: backend-ns
  labels:
    app: backend
spec:
  containers:
  - name: utils
    image: alpine
    command: ["sleep", "3600"]
---
# DATABASE POD (w tym samym namespace co backend)
apiVersion: v1
kind: Pod
metadata:
  name: database-pod
  namespace: backend-ns
  labels:
    app: database
spec:
  containers:
  - name: redis
    image: redis:alpine
    ports:
    - containerPort: 6379
